--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: configure
-      run: apt-get install libdb-dev
+      run: sudo apt-get install -y libdb-dev
     - name: make
       run: make
 #    - name: make check
